.sbtserver/previous.log
New log file opened at Tue Sep 29 23:55:34 BRT 2015 by 633@I
jvm 633@I
jvm vmName=Java HotSpot(TM) 64-Bit Server VM vmVendor=Oracle Corporation vmVersion=25.45-b02
jvm specName=Java Virtual Machine Specification specVendor=Oracle Corporation specVersion=1.8
jvm arguments: [-Xms256m, -Xmx1024m, -XX:MetaspaceSize=64m, -XX:MaxMetaspaceSize=256m]
Starting event engine
Starting sbt command engine
Waiting for sbt command engine
Command engine arguments=List()
Command engine baseDirectory=/Users/paulofernandes/Developer/wiki_play/mineracao_wiki
Command engine initial remaining commands List(--initialize, onFailure load-failed, boot, server-send-ready-for-request, server-handle-next-server-request)
> --initialize
> initialize
> onFailure load-failed
> boot
> reload
[Loading] Scanning directory /Users/paulofernandes/Developer/wiki_play/mineracao_wiki/project
/Users/paulofernandes/Developer/wiki_play/mineracao_wiki/project/sbt-ui.sbt:4: error: not found: value JDKPackagerPlugin
enablePlugins(JDKPackagerPlugin)
              ^
Type error in expression
> load-failed
Failed to load project.
> server-wait-for-reboot
